<resources>
    <string name="app_name">Messenger</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="people">People</string>
    <string name="chats">Chats</string>
    <string name="messenger">Messenger</string>
    <string name="your_story">Your story</string>
    <string name="name">Name</string>
    <string name="newest_message">Newest message</string>
    <string name="aa">Aa</string>
    <string name="received_message">received_message</string>
    <string name="sent_message">sent_message</string>
    <string name="discover">Discover</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="log_in">Log in</string>
    <string name="create_new_account">Create new account</string>
    <string name="no_account_found_create_a_new_account">No account found. Create a new account?</string>
    <string name="mobile_number_or_email">Mobile number or email</string>
    <string name="create_a_password_with_at_least_6_letters_or_numbers_it_should_be_something_others_can_t_guess">Create a password with at least 6 letters or numbers. It should be something others can’t guess.</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="create">Create</string>
    <string name="password">Password</string>
    <string name="your_name">Your name</string>
</resources>