<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.chatScreen.ChatFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTopBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAvatar"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintStart_toEndOf="@+id/ivBack">

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/llText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/cvAvatar">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messenger" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivCall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_call"
            app:layout_constraintEnd_toStartOf="@+id/ivVideoCall" />

        <ImageView
            android:id="@id/ivVideoCall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_video_call"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/clComposeMessage"
        app:layout_constraintTop_toBottomOf="@+id/clTopBar"
        tools:layout_editor_absoluteX="16dp"
        tools:listitem="@layout/sent_message_item" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clComposeMessage"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:id="@+id/ivActions"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_actions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivActions"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivGallery"
            android:layout_width="28dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_gallery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivPhoto"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivAudio"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_audio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivGallery"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/etComposeMessage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_background"
            android:drawableEnd="@drawable/ic_emoji"
            android:hint="@string/aa"
            android:paddingStart="16dp"
            android:paddingEnd="4dp"
            app:layout_constraintEnd_toStartOf="@id/ivLike"
            app:layout_constraintStart_toEndOf="@id/ivAudio" />

        <ImageView
            android:id="@+id/ivLike"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_like"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>